--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.4"
+    "react-native": "0.59.4",
+    "react-native-deprecated-custom-components": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
