--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.4",
-    "react-native-deprecated-custom-components": "^0.1.2"
+    "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-navigation": "^3.8.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
