tela cadastro de atividade

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.4"
+    "react-contexify": "^4.1.0",
+    "react-native": "0.59.4",
+    "react-native-action-button": "^2.8.5",
+    "react-native-material-menu": "^0.4.2",
+    "react-native-modal-datetime-picker": "^7.4.0",
+    "react-native-popup-menu": "^0.15.6"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
