--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.59.4",
     "react-native-action-button": "^2.8.5",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-gesture-handler": "^1.2.0",
     "react-native-material-menu": "^0.4.2",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-popup-menu": "^0.15.6",
