--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.4",
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-action-button": "^2.8.5",
     "react-native-deprecated-custom-components": "^0.1.2",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-material-menu": "^0.4.2",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-popup-menu": "^0.15.6",
