--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-material-menu": "^0.4.2",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1"
   },
   "devDependencies": {
