--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
-node_js:
-- "8.9.4"
-branches:
-only:
-- master
-before_script:
-- npm install -g ionic cordova
-script:
-- ionic cordova build browser --prod
-deploy:
-provider: pages
-skip-cleanup: true
-github-token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-keep-history: true
-on:
-branch: master
-local_dir: www
+install:
+  - nvm install 11
+  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
+  - npm ci
+matrix:
+  include:
+    - os: linux
+      language: android
+      jdk: oraclejdk8
+      android:
+        components:
+          - build-tools-28.0.3
+          - android-28
+          - extra-google-m2repository
+          - extra-google-google_play_services
+      before_install:
+        - yes | sdkmanager "platforms;android-28"
+        - yes | sdkmanager "build-tools;28.0.3"
+      script:
+        - "./android/gradlew assembleRelease -p android/"
+        - npm run lint
+      cache:
+        directories:
+          - node_modules
