--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.4",
     "axios": "^0.18.0",
+    "lottie-react-native": "^2.6.1",
     "moment": "^2.24.0",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-action-button": "^2.8.5",
@@ -19,6 +21,7 @@
     "react-native-material-menu": "^0.4.2",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1"
   },
