--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
-install:
-  - nvm install 11
-  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
-  - npm ci
-matrix:
-  include:
-    - os: linux
-      language: android
-      jdk: oraclejdk8
-      android:
-        components:
-          - build-tools-28.0.3
-          - android-28
-          - extra-google-m2repository
-          - extra-google-google_play_services
-      before_install:
-        - yes | sdkmanager "platforms;android-28"
-        - yes | sdkmanager "build-tools;28.0.3"
-      script:
-        - "./android/gradlew assembleRelease -p android/"
-        - npm run lint
-      cache:
-        directories:
-          - node_modules
+language: node_js
+node_js:
+  - "stable"
+cache:
+  directories:
+  - node_modules
+
+branches:
+  only:
+    - master1
+    - dev
+script:
+  - npm test
+  - npm run build
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $github-token  # Set in travis-ci.org dashboard, marked secure
+  local_dir: build
+  keep-history: true
+  on:
+    branch: master
+
