--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
+install:
+  - nvm install 11
+  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
+  - npm ci
 node_js:
   - "stable"
 cache:
