--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 install:
-  - nvm install 11
-  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
+  - npm install 
   - npm ci
 node_js:
   - "stable"
