--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ branches:
 script:
   - npm test
   - npm run build
+  - react-native link @react-native-community/async-storage
 
 deploy:
   provider: pages
