--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
-os: linux
-language: android
-jdk: oraclejdk8
-android:
-  components:
-    - build-tools-23.0.1
-    - android-23
-before_install:
-  - yes | sdkmanager "platforms;android-23"
-  - yes | sdkmanager "build-tools;23.0.1"
-  - nvm install && nvm use
-  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
 install:
+  - nvm install 11
+  - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
   - npm ci
-script:
-  - "./android/gradlew assembleRelease -p android/"
+matrix:
+  include:
+    - os: linux
+      language: android
+      jdk: oraclejdk8
+      android:
+        components:
+          - build-tools-28.0.3
+          - android-28
+      before_install:
+        - yes | sdkmanager "platforms;android-28"
+        - yes | sdkmanager "build-tools;28.0.3"
+      script:
+        - "./android/gradlew assembleRelease -p android/"
+        - npm run lint
+      cache:
+        directories:
+          - node_modules
