--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
         components:
           - build-tools-28.0.3
           - android-28
+          - extra-google-google_play_services
+          - extra-google-m2repository
+          - extra-android-m2repository
       before_install:
         - yes | sdkmanager "platforms;android-28"
         - yes | sdkmanager "build-tools;28.0.3"
