--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ matrix:
       before_install:
         - yes | sdkmanager "platforms;android-28"
         - yes | sdkmanager "build-tools;28.0.3"
+      script:
+        - "./android/gradlew assembleRelease -p android/" 
       cache:
         directories:
           - node_modules
