--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-material-menu": "^0.4.2",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-simple-dialogs": "^1.1.0",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1"
