--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
         - yes | sdkmanager "platforms;android-28"
         - yes | sdkmanager "build-tools;28.0.3"
       script:
+        - chmod +x ./android/gradlew
         - "./android/gradlew assembleRelease -p android/" 
       cache:
         directories:
