--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.59.4",
     "react-native-action-button": "^2.8.5",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-firebase": "^5.3.1",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-menu": "^0.4.2",
