--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
   implementation "com.google.android.gms:play-services-base:16.1.0"
   implementation "com.google.firebase:firebase-core:16.0.8"
   implementation "com.google.firebase:firebase-firestore:18.2.0"
+  implementation "com.google.firebase:firebase-auth:17.0.0"
 
 
 
