--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
 
     implementation project(':react-native-firebase')
 
