--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-material-menu": "^0.4.2",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-popup-menu": "^0.15.6",
+    "react-native-push-notification": "^3.1.3",
     "react-native-simple-dialogs": "^1.1.0",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
